-----------
Pylint NEWS
-----------

What's new in Pylint 1.6.4?
===========================

Release date: 2016-07-19

    * Recurse into all the ancestors when checking if an object is an exception

      Since we were going only into the first level, we weren't inferring
      when a class used a metaclass which defined a base Exception class
      for the aforementioned class.


What's new in Pylint 1.6.3?
===========================

Release date: 2016-07-18

    * Do not crash when inferring uninferable exception types for docparams extension

      Close #998

What's new in Pylint 1.6.2?
===========================

Release date: 2016-07-15

    * Do not crash when printing the help of options with default regular expressions

      Close #990

    * More granular versions for deprecated modules.

      Close #991

    * Do not crash in docparams when we can't infer the exception types.


What's new in Pylint 1.6.1?
===========================

Release date: 2016-07-07

    * Use environment markers for supporting conditional dependencies.


What's New in Pylint 1.6.0?
===========================

Release date: 2016-07-07

    * Added a new extension, `pylint.extensions.mccabe`, for warning
      about complexity in code.

    * Deprecate support for --optimize-ast. Part of #975.

    * Deprecate support for the HTML output. Part of #975.

    * Deprecate support for --output-files. Part of #975.

    * Fixed a documentation error for the check_docs extension. Fixes #735.

    * Made the list of property-defining decorators configurable.

    * Fix a bug where the top name of a qualified import was detected as unused variable.

      Close #923.

    * bad-builtin is now an extension check.

    * generated-members support qualified name through regular expressions.

      For instance, one can specify a regular expression as --generated-members=astroid.node_classes.*