@@ -215,6 +215,12 @@ class Python3CheckerTest(testutils.CheckerTestCase):
     def test_cmp_method(self):
         self.defined_method_test('cmp', 'cmp-method')
 
+    def test_div_method(self):
+        self.defined_method_test('div', 'div-method')
+
+    def test_idiv_method(self):
+        self.defined_method_test('idiv', 'idiv-method')
+
     def test_eq_and_hash_method(self):
         """Helper for verifying that a certain method is not defined."""
         node = astroid.extract_node("""
