@@ -13,6 +13,9 @@ Release date: 2016-07-19
       when a class used a metaclass which defined a base Exception class
       for the aforementioned class.
 
+    * Added a new Python 3 warning around implementing '__div__' or '__idiv__'
+      as those methods are phased out in Python 3.
+
 
 What's new in Pylint 1.6.3?
 ===========================
